--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -26,7 +26,7 @@ jobs:
           aws configure set region ${{ secrets.AWS_REGION }}
 
       - name: Deploy to S3
-        run: aws s3 sync ./build s3://project-preview-mehta/main --delete --content-type "application/javascript"
+        run: aws s3 cp s3://project-preview-mehta/main s3://project-preview-mehta/main --recursive --exclude "*" --include "*.js" --metadata-directive REPLACE --content-type "application/javascript"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
