--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pr-build-preview",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
